[tool.poetry]
name = "resilient-http"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.1"
pytest-randomly = "^3.8.0"
pytest-sugar = "^0.9.4"
pytest-clarity = "^1.0.1"
httpretty = "^1.1.3"
flake8 = "^3.9.2"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
mypy = "^0.902"
pytest-mock = "^3.6.1"
flake8-bandit = "^2.1.2"
flake8-pytest-style = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
